--- a/samtools/index.ipynb
+++ b/samtools/index.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "samtools sort -o file.sorted.bam file.bam"
+    "samtools sort -o data/file.sorted.bam data/file.bam"
    ]
   },
   {
@@ -48,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "samtools index file.sorted.bam"
+    "samtools index data/file.sorted.bam"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools view -h -o file.subset.bam -L subset.bed file.bam"
+    "samtools view -h -o data/file.subset.bam -L data/subset.bed data/file.sorted.bam"
    ]
   },
   {
@@ -140,16 +140,8 @@
     "By default `samtools view` outputs in SAM format, so converting from BAM --> SAM is as easy as running `samtools view -h -o outfile.sam file.bam`.\n",
     "\n",
     "For SAM --> BAM, include the `-b` option:\n",
+    "samtools view -b -h -o outfile.bam file.sam\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "samtools view -b -h -o outfile.bam file.sam"
    ]
   },
   {
@@ -193,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools view -F 4 -h file.sorted.bam | head"
+    "samtools view -F 4 -h data/file.sorted.bam | head"
    ]
   },
   {
@@ -209,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools view -f 2 -h file.sorted.bam"
+    "samtools view -f 2 -h data/file.sorted.bam | head"
    ]
   },
   {
@@ -237,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools coverage file.sorted.bam"
+    "samtools coverage data/file.sorted.bam"
    ]
   },
   {
@@ -253,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools coverage file.sorted.bam -r 1"
+    "samtools coverage data/file.sorted.bam -r 1"
    ]
   },
   {
@@ -269,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools coverage -m ERR1013163.sorted.bam -r 1:1-1000"
+    "samtools coverage -m data/file.sorted.bam -r 1:1-1000"
    ]
   },
   {
@@ -285,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools depth -a file.sorted.bam -r 1:1-1000 | head"
+    "samtools depth -a data/file.sorted.bam -r 1:1-1000 | head"
    ]
   },
   {
@@ -299,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stats/flagstats\n",
+    "### Stats\n",
     "Another useful function built into SAMtools is `samtools stats`, which gives some quick summary statistics about your mapping reads. The amount of information it generates is somewhat overkill in most cases, so we will just look at the summary:"
    ]
   },
@@ -309,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools stats ERR1013163.sorted.subset.bam | grep ^SN | cut -f 2-"
+    "samtools stats data/file.sorted.bam | grep ^SN | cut -f 2-"
    ]
   },
   {
@@ -328,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools fastq file.bam | head"
+    "samtools fastq data/file.sorted.bam | head"
    ]
   },
   {
