--- a/samtools/index.ipynb
+++ b/samtools/index.ipynb
@@ -106,7 +106,7 @@
    "outputs": [],
    "source": [
     "samtools view data/file.sorted.bam 1 | head\n",
-    "samtools view data/file.sorted.bam 1:1-1000 | head"
+    "samtools view data/file.sorted.bam 1:1000-1100 | head"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "By default `samtools view` outputs in SAM format, so converting from BAM --> SAM is as easy as running `samtools view -h -o outfile.sam file.bam`.\n",
     "\n",
     "For SAM --> BAM, include the `-b` option:\n",
-    "samtools view -b -h -o outfile.bam file.sam\n",
+    "`samtools view -b -h -o outfile.bam file.sam`\n",
     "\n"
    ]
   },
