--- a/samtools/index.ipynb
+++ b/samtools/index.ipynb
@@ -19,18 +19,9 @@
     "\n",
     "*Filter*: generally this means removing unmapped reads from your file, which we will discuss below.\n",
     "\n",
-    "*Sort*: sort the mapped reads by contig/scaffold and by coordinates. This can be done using `samtools sort`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "samtools sort -o data/file.sorted.bam data/file.bam"
+    "*Sort*: sort the mapped reads by contig/scaffold and by coordinates. This can be done using `samtools sort`:\n",
+    "\n",
+    "`samtools sort -o data/file.sorted.bam data/file.bam`"
    ]
   },
   {
@@ -106,7 +97,7 @@
    "outputs": [],
    "source": [
     "samtools view data/file.sorted.bam 1 | head\n",
-    "samtools view data/file.sorted.bam 1:1000-1100 | head"
+    "samtools view data/file.sorted.bam 1:100-200 | head"
    ]
   },
   {
@@ -185,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools view -F 4 -h data/file.sorted.bam | head"
+    "samtools view -F 4 data/file.sorted.bam | head"
    ]
   },
   {
@@ -201,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools view -f 2 -h data/file.sorted.bam | head"
+    "samtools view -f 2 data/file.sorted.bam | head"
    ]
   },
   {
