--- a/samtools/index.ipynb
+++ b/samtools/index.ipynb
@@ -113,7 +113,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samtools view -h -o data/file.subset.bam -L data/subset.bed data/file.sorted.bam"
+    "cat data/subset.bed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samtools view -h -o data/file.subset.sam -L data/subset.bed data/file.sorted.bam"
    ]
   },
   {
