--- a/intro-to-r/index.Rmd
+++ b/intro-to-r/index.Rmd
@@ -23,7 +23,7 @@ getwd()
 
 Let's start by creating one of the simplest R objects, a vector of numbers.
 ```{r}
-v1<-c(1,2,3,4,5)
+
 ```
 
 v1 is an *object* which we created by using the ```<-``` operator (less followed by a dash).
@@ -32,25 +32,19 @@ v1 now contains the output of the *function* ```c(1,2,3,4,5)``` (c, for **c**omb
 
 Let's display the contents of v1:
 ```{r}
-print(v1)
+
 ```
 
 We can also just type the name of an object (in this case ```v1```) to display it.
 
 Let's make a few more objects:
 ```{r}
-x<-10
-x
 
-y<-11
-y
-
-some_letters<-c("a", "b", "c", "d")
 ```
 With this last variable, we had to use ```""``` to specify that we want to create a character vector. Otherwise it thinks we are looking for variables to combine called a,b,c and d.
 
 ```{r, eval=FALSE}
-some_letters <- c(a,b,c,d)
+
 ```
 
 
@@ -75,24 +69,19 @@ If you are not exactly sure of the function name, you can perform a search:
 
 We can manipulate objects like so:
 ```{r}
-x+5
-x*2
-x
+
 ```
 
 Note that the value of ```x``` is not modified here. We did not save the output to a new object, so it is printed to the screen.
 
 If we want to update the value of ```x```, we need to use our assignment operator:
 ```{r}
-x<-x+5
-x
+
 ```
 
 R handles vector math for us automatically:
 ```{r}
-v1*x
-v2<-v1*x
-v2
+
 ```
 
 > **Vector exercises:**
@@ -101,17 +90,9 @@ v2
 >
 >2. There are a number of functions that operate on vectors, including length(), max(), min(), and mean(), all of which do exactly what they sound like they do. So for example length(nums) should return 5, because nums is a 5-element vector. Use these functions to get the minimum, maximum, and mean value for the nums vector you created.
 
-Note for this last question, you can solve this either by creating a new object (e.g. ```cur_obj```), or by nesting the functions inside each other.
 
 ```{r}
-#1
-nums <- c(33, 22, 41, 54, 91)
 
-#2
-length(nums)
-min(nums)
-max(nums)
-mean(nums)
 
 ```
 
@@ -121,22 +102,17 @@ mean(nums)
 All objects have a type. Object types are a complex topic and we are only going to scratch the surface today. To slightly simplify, all data objects in R are either atomic vectors (contain only a single type of data), or data structures that combine atomic vectors in various ways. We'll walk through a few examples. First, let's consider a couple of the vectors that we've already made.
 
 ```{r}
-nums <- c(33, 22, 41, 54, 91)
-class(nums)
-class(some_letters)
+
 ```
 
 *Numeric* and *character* data types are two of the most common we'll encounter, and are just what they sound like. Another useful type is *logical* data, as in TRUE/FALSE. We can create a logical vector directly like so:
 ```{r}
-logic1<-c(TRUE, TRUE, FALSE, FALSE)
-logic1
-class(logic1)
+
 ```
 
 Or we can use logical tests.
 ```{r}
-logic2<-v1>2
-logic2
+
 ```
 
 Note that the logical test here (>2) is applied independently to each element in the vector. We'll come back to this when we talk about data subsets.
@@ -148,8 +124,6 @@ Note that the logical test here (>2) is applied independently to each element in
 
 ```{r}
 
-#1
-big_nums <- nums>mean(nums)
 
 ```
 
@@ -159,9 +133,7 @@ big_nums <- nums>mean(nums)
 We can also extract portions of vectors that we've created using ```[]``` following the vector, with the positions we wish to extract. For example, we can extract portions of the nums vector:
 
 ```{r}
-nums[1]
-nums[1:5]
-nums[c(1,4,5)]
+
 ```
 
 Now it can be useful to specify which positions you would like to include, but often it is more useful to create new objects based on some sort of rule. That is where logical vectors come in, and really how you will mostly be using logical vectors going forward.
@@ -171,20 +143,19 @@ For example, in the last exercise, we constructed a logical vector that was the 
 Let's take a look at both of these vectors again.
 
 ```{r}
-nums
-big_nums
+
 ```
 
 Let's say we actually want to extract all of the numbers that are bigger than the mean (so all of the ```TRUE```) values. All we have to do is put the logical vector in brackets.
 
 ```{r}
-nums[big_nums]
+
 ```
 
 We don't necessarily have to define this vector ahead of time, but can put the rule in the brackets as well.
 
 ```{r}
-nums[nums>mean(nums)]
+
 ```
 
 > **Vector Subsetting Data exercises:**
@@ -196,8 +167,8 @@ nums[nums>mean(nums)]
 >  > '> , < , == , !='
 
 ```{r}
-#1
-nums[nums>min(nums)]
+
+
 ```
 
 
@@ -215,27 +186,24 @@ We'll focus on data frames for today, but lists and matrices can also be very po
 One way to do this is with the data.frame() function.
 
 ```{r}
-df1<-data.frame(label=c("rep1", "rep2", "rep3", "rep4"), data=c(23, 34, 15, 19))
-df1
-class(df1)
+
 ```
 
-str() gives lots of information about the data type of the consituent parts of a data frame
+str() gives lots of information about the data type of the constituent parts of a data frame
 ```{r}
-str(df1)
+
 ```
 
 We can use the function head() to look at part of a a dataframe (or any R object). This can be very useful if you have a very large or long dataframe. You also can control how many lines of the dataframe you view with ```n=#```, although the default is 6.
 
 ```{r}
-head(df1)
-head(df1, n=2)
+
 ```
 
 The summary() function can also be very useful to get a snapshot of the data in your dataframe.
 
 ```{r}
-summary(df1)
+
 ```
 
 
@@ -245,7 +213,7 @@ summary(df1)
 So far we have been working with small objects we created by hand. A more common way to create dataframes is by reading from a file. There are a few functions to do this in R: read.table() and read.csv() make this easy.
 
 ```{r}
-bus<-read.table(file="/home/rstudio/data/mbta.tsv", sep="\t", header=TRUE)
+
 ```
 
 
@@ -255,20 +223,19 @@ bus<-read.table(file="/home/rstudio/data/mbta.tsv", sep="\t", header=TRUE)
 
 
 ```{r}
-#2
-head(bus, n=20)
+
 ```
 
 Again, summary() is a good way to see some basic information about a dataframe
 
 ```{r}
-summary(bus)
+
 ```
 
 The view function can be useful for viewing dataframes in a spread-sheet like format.
 
 ```{r, eval=FALSE}
-View(bus)
+
 ```
 
 ### Subsetting and Manipulating Dataframes
@@ -276,11 +243,7 @@ View(bus)
 We learned about how to subset vectors earlier, now let's look at ways to get subsets of data from two-dimensional data. R uses ```[]``` to index rows and columns, like so:
 
 ```{r, eval=FALSE}
-bus[1,1]
-bus[1,]
-bus[1:5,]
-bus[1:5,4]
-bus[c(1,3,5),c(2,3)]
+
 ```
 
 The first number refers to rows, and the second to columns in the case for 2-dimensional objects.
@@ -288,24 +251,21 @@ The first number refers to rows, and the second to columns in the case for 2-dim
 Notice that when you are extracting data from a single column, the data are returned as a vector of the same type as the column. However, if you extract more than one column, the data are returend as a data frame.
 
 ```{r, eval=FALSE}
-str(bus[1,1])
-str(bus[1:5,3])
-str(bus[1:3,1:3])
+
 ```
 
 
 Often we want to select a set of rows from a data frame matching some criteria. We can use the subset() function for this. Let's start by just getting the data for key bus routes.
 
 ```{r}
-key.bus<-subset(bus,type=="Key")
-View(key.bus)
+
 ```
 
 Sometimes we might want something more complicated. Let's say we want to get data for all "local" bus routes with at least 1000 daily riders.
 
 ```{r}
-local.bus<-subset(bus, type=="Local" & ridership > 1000)
-View(local.bus)
+
+
 ```
 
 > **Subsetting Data exercises:**
@@ -326,12 +286,7 @@ View(local.bus)
 >
 
 ```{r}
-#1
-subset(bus,ridership>2500)
-#2
-subset(bus,type!="Key")
-#3
-bus_2500_notKey <- subset(bus, ridership>2500 & type != "Key")
+
 ```
 
 
@@ -342,10 +297,10 @@ We can add and manipulate the data frame as well, but we will save that for the 
 We've added several variables now, and we might want to write our updated dataset to a file. We do this with the write.table() function, which writes out a data.frame.
 
 ```{r}
-write.table(bus, file="mbta_bus_data.tsv", quote=F, sep="\t", row.names=F, col.names=T)
+
 ```
 
-But where did R put the file on our computer? R does all file operations without a full path in a working directory. RStudio has a preference to set the default working directory, which is typically something like /Users/Allison/R.
+But where did R put the file on our computer? R does all file operations without a full path in a working directory. RStudio has a preference to set the default working directory, which is typically something like /Users/Danielle/R.
 
 To see the current working directory, use:
 ```{r}
@@ -354,19 +309,6 @@ getwd()
 
 We can change the working directory with ```setwd()```.
 
-Note that you can also save R data objects directly in an R data file (.Rdat). This can come in handy if you have a number of R objects that took a long time to compute, and you want to work on them later. This can also be useful if you are working with R objects that can't easily be saved as a tab-delimited file.
-
-```{r}
-save(bus,bus_2500_notKey,file="bus_objects.Rdat")
-rm(bus)
-rm(bus_2500_notKey)
-```
-
-Later, when you load the file, those objects will automatically be added to your environment.
-```{r}
-load("bus_objects.Rdat")
-```
-
 
 >**File operators exercises:**
 >
@@ -374,5 +316,5 @@ load("bus_objects.Rdat")
 >
 
 ```{r}
-write.table(bus_2500_notKey,file="bus_2500_notKey.tsv",quote=F,sep="\t",row.names=F,col.names=F)
+
 ```
